src/test/ui/associated-types/point-at-type-on-obligation-failure-2.stderr
error[E0277]: the trait bound `bool: Bar` is not satisfied
  --> $DIR/point-at-type-on-obligation-failure-2.rs:18:18
   |
LL | trait Baz where Self::Assoc: Bar {
   |                              --- required by this bound in `Baz`
...
LL |     type Assoc = bool;
   |                  ^^^^ the trait `Bar` is not implemented for `bool`

error[E0277]: the trait bound `bool: Bar` is not satisfied
  --> $DIR/point-at-type-on-obligation-failure-2.rs:26:18
   |
LL | trait Bat where <Self as Bat>::Assoc: Bar {
   |                                       --- required by this bound in `Bat`
...
LL |     type Assoc = bool;
   |                  ^^^^ the trait `Bar` is not implemented for `bool`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
